hide main during auth on protected pages

--- a/source/sass/mod-my-pages.scss
+++ b/source/sass/mod-my-pages.scss
@@ -1,3 +1,4 @@
 @import './settings/var_colors';
 @import './utils/authenticated';
 @import './components/my-pages-button';
+@import './components/protected-page';
