fix aligment of myPagesMenu in nav-helper

--- a/source/sass/mod-my-pages.scss
+++ b/source/sass/mod-my-pages.scss
@@ -1,4 +1,5 @@
 @import './settings/var_colors';
 @import './utils/authenticated';
 @import './components/my-pages-button';
+@import './components/my-pages-menu';
 @import './components/protected-page';
