--- a/source/sass/mod-my-pages.scss
+++ b/source/sass/mod-my-pages.scss
@@ -3,3 +3,4 @@
 @import './components/my-pages-button';
 @import './components/my-pages-menu';
 @import './components/protected-page';
+@import './modules/mod-my-apps';
