improve visual hierarchy in mobile

--- a/source/sass/modules/_mod-my-apps.scss
+++ b/source/sass/modules/_mod-my-apps.scss
@@ -1,11 +1,17 @@
 $font-size-title-xs: 16px;
 $font-size-body-xs: 13px;
 
+.c-card--mod-my-apps {
+  flex: 1 1 auto;
+}
+
 @media screen and (max-width: 32.4375em) {
   .c-card--mod-my-apps .c-card__title {
     font-size: $font-size-title-xs;
+    line-height: 1.3;
   }
   .c-card--mod-my-apps .c-card__body {
     font-size: $font-size-body-xs;
+    line-height: 1.5;
   }
 }
